--- a/index.html
+++ b/index.html
@@ -3,53 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>3D迷路 - モバイル対応版</title>
+    <title>3D迷路ゲーム</title>
+    <!-- Three.jsの読み込み（これが大事！） -->
     <script src="https://cdn.jsdelivr.net/npm/three@0.167.1/build/three.min.js"></script>
     <style>
-        body { margin: 0; overflow: hidden; background: #000; touch-action: none; }
+        body { margin: 0; overflow: hidden; background: #000; }
         canvas { display: block; }
         #info {
             position: absolute;
-            top: 10px; left: 10px; right: 10px;
+            top: 10px; left: 10px;
             color: white;
-            font-family: Arial, sans-serif;
-            background: rgba(0,0,0,0.6);
-            padding: 10px;
+            background: rgba(0,0,0,0.7);
+            padding: 15px;
             border-radius: 10px;
-            font-size: 14px;
-            text-align: center;
+            font-size: 16px;
             pointer-events: none;
             z-index: 10;
-        }
-        #joystick {
-            position: absolute;
-            bottom: 30px;
-            left: 30px;
-            width: 120px;
-            height: 120px;
-            background: rgba(255,255,255,0.1);
-            border-radius: 50%;
-            border: 3px solid rgba(255,255,255,0.3);
-            display: none;
-            z-index: 20;
-        }
-        #knob {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            background: rgba(0,255,136,0.8);
-            border-radius: 50%;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            box-shadow: 0 0 20px #00ff88;
         }
         #win {
             position: absolute;
             top: 50%; left: 50%;
             transform: translate(-50%, -50%);
             color: #0f0;
-            font-size: 50px;
+            font-size: 60px;
             font-weight: bold;
             text-shadow: 0 0 30px #0f0;
             display: none;
@@ -60,22 +36,17 @@
 </head>
 <body>
     <div id="info">
-        <span id="mobileInfo">指でジョイスティックを操作</span>
-        <span id="pcInfo">WASD/矢印キー: 移動 | マウス: 視点 | クリックでロック</span>
+        PC: 画面クリック → マウスで視点 + WASD/矢印キー移動<br>
+        スマホ/iPad: 左下ジョイスティックで移動<br>
+        赤い柱がゴール！
     </div>
-    <div id="joystick">
-        <div id="knob"></div>
-    </div>
-    <div id="win">クリアおめでとう！<br><small>リロードで再挑戦</small></div>
+    <div id="win">クリアおめでとう！！<br><small>リロードで再挑戦</small></div>
 
     <script>
         // モバイル検知
-        const isMobile = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
-        document.getElementById('mobileInfo').style.display = isMobile ? 'block' : 'none';
-        document.getElementById('pcInfo').style.display = isMobile ? 'none' : 'block';
-        if (isMobile) document.getElementById('joystick').style.display = 'block';
+        const isMobile = /Mobi|Android|iPad|iPhone|iPod/.test(navigator.userAgent) || 'ontouchstart' in window;
 
-        // Three.js設定
+        // Three.js基本設定
         const scene = new THREE.Scene();
         scene.background = new THREE.Color(0x87ceeb);
         scene.fog = new THREE.FogExp2(0x87ceeb, 0.015);
@@ -86,11 +57,12 @@
         renderer.shadowMap.enabled = true;
         document.body.appendChild(renderer.domElement);
 
+        // ライト
         const light = new THREE.DirectionalLight(0xffffff, 1);
         light.position.set(10, 20, 10);
         light.castShadow = true;
         scene.add(light);
-        scene.add(new THREE.AmbientLight(0x666666));
+        scene.add(new THREE.AmbientLight(0x888888));
 
         // 地面
         const floor = new THREE.Mesh(
@@ -101,10 +73,9 @@
         floor.receiveShadow = true;
         scene.add(floor);
 
-        // 壁マテリアル
+        // 壁
         const wallMaterial = new THREE.MeshStandardMaterial({ color: 0x4444aa });
-
-        // 迷路データ (10x10)
+        const wallSize = 5;
         const maze = [
             [1,1,1,1,1,1,1,1,1,1],
             [1,0,0,0,1,0,0,0,0,1],
@@ -118,7 +89,6 @@
             [1,1,1,1,1,1,1,1,1,1]
         ];
 
-        const wallSize = 5;
         for (let i = 0; i < maze.length; i++) {
             for (let j = 0; j < maze[i].length; j++) {
                 if (maze[i][j] === 1) {
@@ -134,57 +104,82 @@
             }
         }
 
-        // ゴール（赤い柱）
+        // ゴール
         const goal = new THREE.Mesh(
             new THREE.BoxGeometry(3, 8, 3),
-            new THREE.MeshStandardMaterial({ color: 0xff0000, emissive: 0xff2222, emissiveIntensity: 0.8 })
+            new THREE.MeshStandardMaterial({ color: 0xff0000, emissive: 0xff0000, emissiveIntensity: 0.8 })
         );
         goal.position.set(35, 4, 35);
         scene.add(goal);
 
-        // プレイヤー初期位置
+        // カメラ初期位置
         camera.position.set(2.5, 5, 12.5);
 
-        // 移動方向
-        let moveForward = false, moveBackward = false, moveLeft = false, moveRight = false;
+        // 移動変数
+        let move = { forward: false, backward: false, left: false, right: false };
 
-        // PC用キー操作
+        // PC操作
         if (!isMobile) {
+            renderer.domElement.addEventListener('click', () => renderer.domElement.requestPointerLock());
+            document.addEventListener('pointerlockchange', () => {
+                if (document.pointerLockElement === renderer.domElement) {
+                    document.addEventListener('mousemove', onMouseMove);
+                } else {
+                    document.removeEventListener('mousemove', onMouseMove);
+                }
+            });
+
+            let yaw = 0;
+            function onMouseMove(e) {
+                yaw -= e.movementX * 0.002;
+                camera.rotation.y = yaw;
+            }
+
             document.addEventListener('keydown', e => {
                 switch (e.key.toLowerCase()) {
-                    case 'w': case 'arrowup': moveForward = true; break;
-                    case 's': case 'arrowdown': moveBackward = true; break;
-                    case 'a': case 'arrowleft': moveLeft = true; break;
-                    case 'd': case 'arrowright': moveRight = true; break;
+                    case 'w': case 'arrowup': move.forward = true; break;
+                    case 's': case 'arrowdown': move.backward = true; break;
+                    case 'a': case 'arrowleft': move.left = true; break;
+                    case 'd': case 'arrowright': move.right = true; break;
                 }
             });
             document.addEventListener('keyup', e => {
                 switch (e.key.toLowerCase()) {
-                    case 'w': case 'arrowup': moveForward = false; break;
-                    case 's': case 'arrowdown': moveBackward = false; break;
-                    case 'a': case 'arrowleft': moveLeft = false; break;
-                    case 'd': case 'arrowright': moveRight = false; break;
-                }
-            });
-
-            // マウスロック（PC用）
-            renderer.domElement.addEventListener('click', () => renderer.domElement.requestPointerLock());
-            let yaw = 0, pitch = 0;
-            document.addEventListener('mousemove', e => {
-                if (document.pointerLockElement === renderer.domElement) {
-                    yaw -= e.movementX * 0.002;
-                    pitch -= e.movementY * 0.002;
-                    pitch = Math.max(-Math.PI/2 + 0.1, Math.min(Math.PI/2 - 0.1, pitch));
-                    camera.rotation.y = yaw;
-                    camera.rotation.x = pitch;
+                    case 'w': case 'arrowup': move.forward = false; break;
+                    case 's': case 'arrowdown': move.backward = false; break;
+                    case 'a': case 'arrowleft': move.left = false; break;
+                    case 'd': case 'arrowright': move.right = false; break;
                 }
             });
         }
 
-        // モバイル用ジョイスティック
+        // ジョイスティック（モバイル用）
         if (isMobile) {
-            const joystick = document.getElementById('joystick');
-            const knob = document.getElementById('knob');
+            const joystick = document.createElement('div');
+            joystick.id = 'joystick';
+            joystick.style.position = 'absolute';
+            joystick.style.bottom = '30px';
+            joystick.style.left = '30px';
+            joystick.style.width = '120px';
+            joystick.style.height = '120px';
+            joystick.style.background = 'rgba(255,255,255,0.1)';
+            joystick.style.borderRadius = '50%';
+            joystick.style.border = '3px solid rgba(255,255,255,0.3)';
+            document.body.appendChild(joystick);
+
+            const knob = document.createElement('div');
+            knob.id = 'knob';
+            knob.style.position = 'absolute';
+            knob.style.width = '50px';
+            knob.style.height = '50px';
+            knob.style.background = 'rgba(0,255,136,0.8)';
+            knob.style.borderRadius = '50%';
+            knob.style.top = '50%';
+            knob.style.left = '50%';
+            knob.style.transform = 'translate(-50%, -50%)';
+            knob.style.boxShadow = '0 0 20px #00ff88';
+            joystick.appendChild(knob);
+
             let touchId = null;
             let centerX, centerY;
 
@@ -193,8 +188,8 @@
                 if (touchId === null) {
                     const touch = e.touches[0];
                     touchId = touch.identifier;
-                    centerX = joystick.offsetLeft + joystick.offsetWidth / 2;
-                    centerY = joystick.offsetTop + joystick.offsetHeight / 2;
+                    centerX = joystick.offsetLeft + 60;
+                    centerY = joystick.offsetTop + 60;
                 }
             });
 
@@ -202,29 +197,26 @@
                 e.preventDefault();
                 for (let touch of e.touches) {
                     if (touch.identifier === touchId) {
-                        const dx = touch.clientX - centerX;
-                        const dy = touch.clientY - centerY;
+                        let dx = touch.clientX - centerX;
+                        let dy = touch.clientY - centerY;
                         const dist = Math.min(50, Math.hypot(dx, dy));
                         const angle = Math.atan2(dx, dy);
+                        dx = dist * Math.cos(angle);
+                        dy = dist * Math.sin(angle);
+                        knob.style.transform = `translate(${dx}px, ${dy}px)`;
 
-                        knob.style.transform = `translate(${dist * Math.cos(angle)}px, ${dist * Math.sin(angle)}px)`;
-
-                        // 移動方向判定
-                        moveForward = dy < -20;
-                        moveBackward = dy > 20;
-                        moveLeft = dx < -20;
-                        moveRight = dx > 20;
+                        move.forward = dy < -20;
+                        move.backward = dy > 20;
+                        move.left = dx < -20;
+                        move.right = dx > 20;
                     }
                 }
             });
 
-            joystick.addEventListener('touchend', e => {
-                e.preventDefault();
-                if (e.touches.length === 0 || !Array.from(e.touches).some(t => t.identifier === touchId)) {
-                    touchId = null;
-                    knob.style.transform = 'translate(-50%, -50%)';
-                    moveForward = moveBackward = moveLeft = moveRight = false;
-                }
+            joystick.addEventListener('touchend', () => {
+                touchId = null;
+                knob.style.transform = 'translate(-50%, -50%)';
+                move.forward = move.backward = move.left = move.right = false;
             });
         }
 
@@ -243,10 +235,22 @@
             const speed = 0.2;
             let dx = 0, dz = 0;
 
-            if (moveForward) { dx -= Math.sin(camera.rotation.y) * speed; dz -= Math.cos(camera.rotation.y) * speed; }
-            if (moveBackward) { dx += Math.sin(camera.rotation.y) * speed; dz += Math.cos(camera.rotation.y) * speed; }
-            if (moveLeft) { dx -= Math.cos(camera.rotation.y) * speed; dz += Math.sin(camera.rotation.y) * speed; }
-            if (moveRight) { dx += Math.cos(camera.rotation.y) * speed; dz -= Math.sin(camera.rotation.y) * speed; }
+            if (move.forward) {
+                dx -= Math.sin(camera.rotation.y) * speed;
+                dz -= Math.cos(camera.rotation.y) * speed;
+            }
+            if (move.backward) {
+                dx += Math.sin(camera.rotation.y) * speed;
+                dz += Math.cos(camera.rotation.y) * speed;
+            }
+            if (move.left) {
+                dx -= Math.cos(camera.rotation.y) * speed;
+                dz += Math.sin(camera.rotation.y) * speed;
+            }
+            if (move.right) {
+                dx += Math.cos(camera.rotation.y) * speed;
+                dz -= Math.sin(camera.rotation.y) * speed;
+            }
 
             const newX = camera.position.x + dx;
             const newZ = camera.position.z + dz;
@@ -256,7 +260,6 @@
                 camera.position.z = newZ;
             }
 
-            // ゴール判定
             if (camera.position.distanceTo(goal.position) < 5) {
                 document.getElementById('win').style.display = 'block';
             }
